--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,104 +1,50 @@
-/* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav ul {
-    list-style: none;
+  }
+  
+  nav {
+    background-color: #22091f;
+    padding: 10px 0;
+  }
+  
+  nav ul {
+    list-style-type: none;
     margin: 0;
-    padding: 0;
-}
-
-nav ul li {
+    padding: 10px;
+    text-align: right;
+  }
+  
+  nav ul li {
     display: inline;
-    margin-left: 1rem;
-}
-
-nav ul li a {
-    color: #fff;
+    margin-right: 30px;
+  }
+  
+  nav ul li a {
     text-decoration: none;
-}
-
-section.main-content {
-    padding: 2rem;
-}
-
-footer {
-    background-color: #333;
     color: #fff;
-    text-align: center;
-    padding: 1rem;
+    font-size: 20px;
+    font-weight: bold;
+  }
+  
+  .float-btn {
     position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* Estilos específicos para el formulario de inicio de sesión */
-.login-form {
-    max-width: 400px;
-    margin: 2rem auto;
-    padding: 2rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.login-form h2 {
-    margin-bottom: 1rem;
-}
-
-.login-form label {
-    display: block;
-    margin-bottom: 0.5rem;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-}
-
-.login-form button {
-    background-color: #333;
+    bottom: 20px;
+    right: 40px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #22091f; /* Guindo */
     color: #fff;
+    font-size: 40px;
+    text-align: center;
     border: none;
-    padding: 0.5rem 1rem;
     cursor: pointer;
-    border-radius: 5px;
-}
-
-.login-form button:hover {
-    background-color: #555;
-}
-/* Estilos para la tabla */
-#taskTable {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-#taskTable th, #taskTable td {
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
-    text-align: left;
-}
-
-#taskTable th {
-    background-color: #f2f2f2;
-}
-
-/* Estilos para la ventana emergente */
-.modal {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -106,83 +52,126 @@ footer {
     top: 0;
     width: 100%;
     height: 100%;
+    background-color: rgba(0,0,0,0.4);
     overflow: auto;
-    background-color: rgba(0,0,0,0.5);
-}
+  }
+  
+  /* Resto de estilos */
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
+    margin: 20% auto;
+    padding: 25px;
     border: 1px solid #888;
-    width: 40%;
-}
-
-.close {
+    width: 50%; /* Ajusta el ancho del formulario */
+    border-radius: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+  }
+  
+  /* Resto de estilos */
+  
+  
+  .close-btn {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
+  }
+  
+  .close-btn:hover,
+  .close-btn:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
+  }
+  
 
-/* Estilos para el botón flotante */
-.floating-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #007bff;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-    border: none;
-    outline: none;
-}
-
-.cancel-button {
-    background-color: #dc3545;
-}
-
-/* Estilos para la ventana emergente de administración de categorías */
-#categoryModal {
-    display: none;
-}
-
-#categoryModal .modal-content {
-    width: 60%;
-}
-
-#categoryModal form {
-    display: flex;
-    margin-top: 10px;
-}
-
-#categoryModal input[type="text"] {
-    flex: 1;
-    margin-right: 10px;
-}
-
-#categoryModal button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+  
+  #task-table {
+    margin: 10px auto;
+    width: 80%; /* Asegura que la tabla ocupe el ancho completo del contenedor */
+    border-collapse: collapse;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-bottom: 20px; /* Agrega un espacio entre la tabla y el siguiente elemento */
+    background-color: #c0b1a1;
+  }
+  
+  #task-table th, #task-table td {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  #task-table th {
+    background-color: #762b47;
+    color: #fff;
+  }
+  
+  #task-table tbody tr:last-child td {
+    border-bottom: none;
+  }
+  
+  #task-table button {
+    background-color: transparent;
     border: none;
     cursor: pointer;
-}
-
-#categoryModal button:hover {
-    background-color: #0056b3;
-}
-
-#categoryList {
-    margin-top: 20px;
-}
+    font-size:'16px';
+    color: #333;
+  }
+  
+  #task-table button:hover {
+    color: #22091f; /* Guindo */
+  }
+  
+  .icon-pencil:before {
+    content: "\270E"; /* Icono lápiz */
+  }
+  
+  .icon-trash:before {
+    content: "\1F5D1"; /* Icono basurero */
+  }
+  
+  #task-form label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  
+  #task-form input[type="text"],
+  #task-form input[type="date"],
+  #task-form select {
+    width: calc(100% - 20px);
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: inherit;
+    font-size: 16px;
+  }
+  
+  #task-form select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url("data:image/svg+xml,%3Csvg width='10' height='5' viewBox='0 0 10 5' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1.25L5 4.75L9 1.25' stroke='%23000000' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+  }
+  
+  #task-form input[type="submit"] {
+    width: calc(100% - 20px);
+    padding: 10px;
+    background-color: #22091f;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: inherit;
+    font-size: 16px;
+  }
+  
+  #task-form input[type="submit"]:hover {
+    background-color: #22091f;
+  }
+  
