--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,29 +4,49 @@ body {
     padding: 0;
   }
   
-  nav {
-    background-color: #22091f;
-    padding: 10px 0;
+  .navbar {
+    background-color: #22091f; /* Color de fondo */
+    padding: 15px 30px; /* Espaciado interno */
+    display: flex;
+    justify-content: space-between; /* Distribuye los elementos a los extremos */
+    align-items: center; /* Alinea verticalmente los elementos */
+    font-size:  20px;
   }
   
-  nav ul {
+  .navbar-left {
+    display: flex;
+    align-items: center;
+    padding: 20px 60px;
+    color: #d6cfcf;/* Tamaño del texto */
+  }
+  
+  .navbar-left img {
+    width: 30px; /* Ajusta el tamaño del logo */
+    margin-right: 20px; /* Espacio entre el logo y el texto */
+   
+  }
+  
+  .navbar-right {
     list-style-type: none;
     margin: 0;
-    padding: 10px;
-    text-align: right;
+    padding: 15px 20px;
   }
   
-  nav ul li {
+  .navbar-right li {
     display: inline;
-    margin-right: 30px;
   }
   
-  nav ul li a {
+  .navbar-right li a {
+    color: #fff; /* Color del texto */
     text-decoration: none;
-    color: #fff;
-    font-size: 20px;
-    font-weight: bold;
+    margin-left: 20px; /* Espacio entre las opciones */
+    padding: 10px;
   }
+  
+  .navbar-right li a:hover {
+    color: #dcc5c5; /* Color del texto al pasar el mouse */
+  }
+  
   
   .float-btn {
     position: fixed;
@@ -58,16 +78,17 @@ body {
   
   /* Resto de estilos */
 
-.modal-content {
+  .modal-content {
     background-color: #fefefe;
-    margin: 20% auto;
+    margin: 10% auto; /* 10% desde la parte superior y centrado */
     padding: 25px;
     border: 1px solid #888;
-    width: 50%; /* Ajusta el ancho del formulario */
+    width: 50% !important;  /* Ancho del formulario al 50% */
     border-radius: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
-  }
+}
+
   
   /* Resto de estilos */
   
