--- a/styles/login.css
+++ b/styles/login.css
@@ -1,12 +1,12 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Lato', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: #A4C3B2;
   }
   
   .container {
@@ -20,7 +20,7 @@ body {
     width: 300px;
     padding: 20px;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
   
@@ -44,7 +44,7 @@ body {
   }
   
   button {
-    background-color: #007bff;
+    background-color: #6B9080;
     color: #fff;
     border: none;
     cursor: pointer;
